# exercises

./: .gitmodules
cpp/binaryconverter/: CMakeLists.txt  converterTestFixture.cpp  main.cpp  submodules.cmake
cpp/binaryconverter/include/: converter.h  converterTestFixture.h  helpers.h
cpp/factorial/: CMakeLists.txt  factorial.cpp  factorial.h  factorialTestFixture.cpp  factorialTestFixture.h  main.cpp  readme.md  submodules.cmake
cpp/restserver/: CMakeLists.txt  api.json  connection.cpp  connection.h  handler.cpp  handler.h  main.cpp  readme.md  script.py  server.cpp  server.h
cpp/twosum/: CMakeLists.txt  main.cpp  readme.md  twoSum.cpp  twoSumTestFixture.cpp
cpp/twosum/include/: twoSum.h  twoSumTestFixture.h
